<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <ImageView
        android:contentDescription="@string/txt_skiplogin"
        android:id="@+id/loading_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/loading_page"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/txt_loading_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_loading_title"
        android:textSize="20pt"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/loading_image"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
       	android:layout_height="50dp"
        android:text="@string/btn_login"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_below="@+id/loading_image"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
		android:background="@color/cleargreen"
        android:onClick="ShowLoginPage"
        android:textSize="12pt"/>

</RelativeLayout>