<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:padding="8dp"
            android:textSize="12pt"
            android:gravity="center"
            android:background="@color/cleargreen"/>

        <ImageView
            android:id="@+id/img_pre"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:onClick="BackToSplash"
            android:src="@drawable/ic_keyboard_backspace_black_48dp" 
            android:layout_marginTop="-10.0dip" />

    </FrameLayout>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_title"
        android:layout_marginTop="40dp"
        android:ems="11"
        android:hint="@string/txt_id_hint"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_person_black_48dp"
        android:drawableStart="@drawable/ic_person_black_48dp" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_username"
        android:layout_marginTop="16dp"
        android:hint="@string/txt_pwd_hint"
        android:inputType="textPassword" 
        android:drawableLeft="@drawable/ic_vpn_key_black_48dp"
        android:drawableStart="@drawable/ic_vpn_key_black_48dp" />

    <TextView
        android:id="@+id/login_tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_pwd"
        android:layout_alignEnd="@id/login_pwd"
        android:layout_alignRight="@id/login_pwd"
        android:text="@string/txt_forgetpwd"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_tv_forget"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/btn_login"
		android:background="@color/cleargreen"
		android:textSize="12pt"
        android:onClick="GoHomePage"/>

</RelativeLayout>